objects/zoom_app__Zoom_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to save common ORG wide settings related to Zoom App.</description>
    <fields>
        <fullName>zoom_app__Authenticate_via_Salesforce_Username__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authenticate_via_Salesforce_Username</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Enable_Editable_Contact_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Editable Contact/Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Enable_HVS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Supported only in Lightning Experience</inlineHelpText>
        <label>Enable HVS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__HVS_Disposition_Field__c</fullName>
        <label>HVS Disposition Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Mail_Default_From_Address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Select one of Org Wide Email Addresses, All Meeting Invitation Email Will take this as Outbound Email Address. Please make sure the Org Wide Email addresses is validated</inlineHelpText>
        <label>Mail Default From Address</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zoom_app__Phone_Auto_Save_Call_Logs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Phone - Auto Save Call Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Phone_Auto_Save_SMS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Phone Auto Save SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Turn_Off_Internal_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turn Off Internal Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__WebinarParticipantsSyncBatchSize__c</fullName>
        <description>sync webinar participants set open api page size</description>
        <label>Webinar Participants Sync Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__WebinarRegistrantsSyncBatchSize__c</fullName>
        <description>sync webinar registration set open api page size</description>
        <label>Webinar Registrants Sync Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__ZoomPhoneCallLogConfigExt0__c</fullName>
        <label>ZoomPhoneCallLogConfigExt0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__ZoomPhoneCallLogConfigExt1__c</fullName>
        <label>ZoomPhoneCallLogConfigExt1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__ZoomPhoneCallLogConfigExt2__c</fullName>
        <label>ZoomPhoneCallLogConfigExt2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zoom Configuration</label>
</CustomObject>